시계 구현함 사실 별거 없음

--- a/ScheduleBell/MainWindow.xaml
+++ b/ScheduleBell/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ScheduleBell"
         mc:Ignorable="d"
-        Title="MainWindow" Height="150" Width="350" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="Manual" Loaded="Window_Loaded">
+        Title="ScheduleBell" Height="150" Width="350" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="Manual" Loaded="Window_Loaded" Topmost="True">
     <Grid>
         <TextBlock Name="sche" HorizontalAlignment="Left" Height="63" Margin="10,10,0,0" TextWrapping="Wrap" Text="현재 일정 : " VerticalAlignment="Top" Width="330"/>
         <Rectangle Fill="#FF343434" HorizontalAlignment="Left" Height="4" Margin="10,102,0,0" VerticalAlignment="Top" Width="330"/>
