--- a/ScheduleBell/MainWindow.xaml
+++ b/ScheduleBell/MainWindow.xaml
@@ -5,10 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ScheduleBell"
         mc:Ignorable="d"
-        Title="ScheduleBell" Height="150" Width="350" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="Manual" Loaded="Window_Loaded" Topmost="True">
+        Title="ScheduleBell" Height="400" Width="250" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="Manual" Loaded="Window_Loaded" Topmost="True" MouseDown="Window_Drag" Background="{x:Null}">
     <Grid>
-        <TextBlock Name="sche" HorizontalAlignment="Left" Height="63" Margin="10,10,0,0" TextWrapping="Wrap" Text="현재 일정 : " VerticalAlignment="Top" Width="330"/>
-        <Rectangle Fill="#FF343434" HorizontalAlignment="Left" Height="4" Margin="10,102,0,0" VerticalAlignment="Top" Width="330"/>
-        <TextBlock Name="cloc" HorizontalAlignment="Left" Height="34" Margin="10,111,0,0" TextWrapping="Wrap" Text="0000-00-00 오전 00:00" VerticalAlignment="Top" Width="330" FontSize="24" TextAlignment="Center"/>
+        <Rectangle Fill="#FFDACAB7" HorizontalAlignment="Left" Height="137" Margin="0,0,0,0" VerticalAlignment="Top" Width="250" Stroke="Black"/>
+        <TextBlock HorizontalAlignment="Left" Height="18" Margin="10,10,0,0" TextWrapping="Wrap" Text="현재 일정" VerticalAlignment="Top" Width="230" FontFamily="Malgun Gothic"/>
+        <TextBox Name="sche" Background="#FFDACAB7" HorizontalAlignment="Left" Height="42" Margin="10,30,0,0" Text="일정 예시입니다." VerticalAlignment="Top" Width="230" FontFamily="Malgun Gothic" FontSize="16" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"/>
+        <Rectangle Fill="#FF343434" HorizontalAlignment="Left" Height="4" Margin="10,77,0,0" VerticalAlignment="Top" Width="230"/>
+        <TextBlock Name="cloc" HorizontalAlignment="Left" Height="26" Margin="10,86,0,0" TextWrapping="Wrap" Text="0000-00-00 오전 00:00" VerticalAlignment="Top" Width="230" FontSize="16" TextAlignment="Center"/>
+        <Button x:Name="UnFold" Content="▼" Height="20" Margin="100,114,100,266" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+
+        <Rectangle Fill="White" HorizontalAlignment="Left" Height="263" Margin="0,137,0,0" Stroke="Black" VerticalAlignment="Top" Width="250"/>
+        <TextBox x:Name="MissionName" HorizontalAlignment="Left" Height="23" Margin="5,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="185"/>
+        <Button x:Name="AddMissionBtn" Content="+" HorizontalAlignment="Left" Height="23" Margin="195,142,0,0" VerticalAlignment="Top" Width="50" Click="AddMissionBtn_Click" Padding="1,0,1,4"/>
+        <ScrollViewer HorizontalAlignment="Left" Height="220" Margin="5,170,0,0" VerticalAlignment="Top" Width="240" Padding="2,0,0,0">
+            <StackPanel x:Name="list" HorizontalAlignment="Left" VerticalAlignment="Top">
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
