--- a/ScheduleBell/MainWindow.xaml
+++ b/ScheduleBell/MainWindow.xaml
@@ -9,10 +9,9 @@
     <Grid>
         <Rectangle Fill="#FFDACAB7" HorizontalAlignment="Left" Height="137" Margin="0,0,0,0" VerticalAlignment="Top" Width="250" Stroke="Black"/>
         <TextBlock HorizontalAlignment="Left" Height="18" Margin="10,10,0,0" TextWrapping="Wrap" Text="현재 일정" VerticalAlignment="Top" Width="230" FontFamily="Malgun Gothic"/>
-        <TextBox Name="sche" Background="#FFDACAB7" HorizontalAlignment="Left" Height="42" Margin="10,30,0,0" Text="일정 예시입니다." VerticalAlignment="Top" Width="230" FontFamily="Malgun Gothic" FontSize="16" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"/>
+        <TextBox Name="sche" Background="#FFDACAB7" HorizontalAlignment="Left" Height="42" Margin="10,30,0,0" Text="일정이 없습니다." VerticalAlignment="Top" Width="230" FontFamily="Malgun Gothic" FontSize="16" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True"/>
         <Rectangle Fill="#FF343434" HorizontalAlignment="Left" Height="4" Margin="10,77,0,0" VerticalAlignment="Top" Width="230"/>
         <TextBlock x:Name="cloc" HorizontalAlignment="Left" Height="26" Margin="10,86,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230" FontSize="16" TextAlignment="Center"><Run Text="0000-00-00 오전 00:00"/><Run Text=":00"/></TextBlock>
-        <Button x:Name="UnFold" Content="▼" Height="20" Margin="100,114,100,266" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
 
         <Rectangle Fill="White" HorizontalAlignment="Left" Height="263" Margin="0,137,0,0" Stroke="Black" VerticalAlignment="Top" Width="250"/>
         <TextBox x:Name="MissionName" HorizontalAlignment="Left" Height="23" Margin="5,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="185" KeyDown="MissionName_KeyDown"/>
